--- a/cocoa/res/BrowserWindow.xib
+++ b/cocoa/res/BrowserWindow.xib
@@ -78,14 +78,12 @@
 								<string key="NSToolbarItemPaletteLabel">History</string>
 								<nil key="NSToolbarItemToolTip"/>
 								<object class="NSButton" key="NSToolbarItemView" id="229385913">
-									<reference key="NSNextResponder"/>
+									<nil key="NSNextResponder"/>
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{8, 14}, {30, 25}}</string>
-									<reference key="NSSuperview"/>
-									<reference key="NSWindow"/>
 									<bool key="NSEnabled">YES</bool>
 									<object class="NSButtonCell" key="NSCell" id="296571644">
-										<int key="NSCellFlags">-2080244224</int>
+										<int key="NSCellFlags">67239424</int>
 										<int key="NSCellFlags2">134217728</int>
 										<string key="NSContents"/>
 										<object class="NSFont" key="NSSupport" id="770988704">
@@ -94,7 +92,7 @@
 											<int key="NSfFlags">1044</int>
 										</object>
 										<reference key="NSControlView" ref="229385913"/>
-										<int key="NSButtonFlags">-2033958657</int>
+										<int key="NSButtonFlags">918831359</int>
 										<int key="NSButtonFlags2">163</int>
 										<object class="NSCustomResource" key="NSNormalImage" id="235904051">
 											<string key="NSClassName">NSImage</string>
@@ -125,11 +123,9 @@
 								<string key="NSToolbarItemPaletteLabel">Back/Forward</string>
 								<nil key="NSToolbarItemToolTip"/>
 								<object class="NSSegmentedControl" key="NSToolbarItemView" id="692457026">
-									<reference key="NSNextResponder"/>
+									<nil key="NSNextResponder"/>
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{5, 14}, {71, 25}}</string>
-									<reference key="NSSuperview"/>
-									<reference key="NSWindow"/>
 									<bool key="NSEnabled">YES</bool>
 									<object class="NSSegmentedCell" key="NSCell" id="845979064">
 										<int key="NSCellFlags">67239424</int>
@@ -188,11 +184,9 @@
 								<string key="NSToolbarItemPaletteLabel">URL</string>
 								<nil key="NSToolbarItemToolTip"/>
 								<object class="NSTextField" key="NSToolbarItemView" id="77748234">
-									<reference key="NSNextResponder"/>
+									<nil key="NSNextResponder"/>
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{0, 14}, {96, 22}}</string>
-									<reference key="NSSuperview"/>
-									<reference key="NSWindow"/>
 									<bool key="NSEnabled">YES</bool>
 									<object class="NSTextFieldCell" key="NSCell" id="1053649244">
 										<int key="NSCellFlags">-1804468671</int>
@@ -450,6 +444,7 @@
 					<string>processing</string>
 					<string>title</string>
 					<string>isProcessing</string>
+					<string>browserView.historyVisible</string>
 				</object>
 				<string key="NSObjectClassName">BrowserViewController</string>
 				<bool key="NSEditable">YES</bool>
@@ -626,6 +621,22 @@
 						<reference key="destination" ref="229385913"/>
 					</object>
 					<int key="connectionID">78</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">value: selection.browserView.historyVisible</string>
+						<reference key="source" ref="296571644"/>
+						<reference key="destination" ref="177599630"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="296571644"/>
+							<reference key="NSDestination" ref="177599630"/>
+							<string key="NSLabel">value: selection.browserView.historyVisible</string>
+							<string key="NSBinding">value</string>
+							<string key="NSKeyPath">selection.browserView.historyVisible</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">79</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -861,9 +872,9 @@
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<string>{{343, 318}, {774, 554}}</string>
+					<string>{{276, 318}, {774, 554}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{343, 318}, {774, 554}}</string>
+					<string>{{276, 318}, {774, 554}}</string>
 					<integer value="1"/>
 					<string>{196, 240}</string>
 					<string>{{202, 428}, {480, 270}}</string>
@@ -920,7 +931,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">78</int>
+			<int key="maxID">79</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -928,17 +939,6 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">BrowserView</string>
 					<string key="superclassName">ScrollableView</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">showHistory:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">showHistory:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">showHistory:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">BrowserView.h</string>
@@ -956,6 +956,7 @@
 							<string>goForward:</string>
 							<string>navigate:</string>
 							<string>reloadPage:</string>
+							<string>showHistory:</string>
 							<string>stopLoading:</string>
 							<string>zoomIn:</string>
 							<string>zoomOriginal:</string>
@@ -963,6 +964,7 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -983,6 +985,7 @@
 							<string>goForward:</string>
 							<string>navigate:</string>
 							<string>reloadPage:</string>
+							<string>showHistory:</string>
 							<string>stopLoading:</string>
 							<string>zoomIn:</string>
 							<string>zoomOriginal:</string>
@@ -1008,6 +1011,10 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">reloadPage:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">showHistory:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
